--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 numpy==1.24.3
-pandas==2.0.3
+pandas==2.2.1
 python-dateutil==2.8.2
 streamlit==1.32.0
-plotly==5.18.0 
+plotly==5.19.0
+supabase==2.3.1 
